[resolves #1038] CamelUndertowHostService cannot handle IPV6 addresses